fix: req-res container overflow fix

--- a/_sass/explorer/style.scss
+++ b/_sass/explorer/style.scss
@@ -496,6 +496,8 @@
       }
       pre {
         margin: 0;
+        white-space: nowrap;
+        overflow: auto;
       }
       .collapsing{
         overflow: inherit;
